# drot-pybind11

./: .gitignore  CMakeLists.txt  Makefile  README.md  example.ipynb  fast_ot.cu
examples/: my_drot.cu  notebook.ipynb  test.cu
src/: drot.hpp
